Finally got a good build for in-memory and local profiles.